- Fix initial router - Fix in the alert to delete items.

--- a/src/app/pages/add-item-admin/add-item-admin.page.html
+++ b/src/app/pages/add-item-admin/add-item-admin.page.html
@@ -1,4 +1,7 @@
-<app-header-admin [title]="'Agregar producto'"></app-header-admin>
+<app-header-admin
+  [backButton]="true"
+  [title]="'Agregar producto'"
+></app-header-admin>
 
 <ion-content>
   <ion-grid [formGroup]="form">
