--- a/src/app/shared/components/item/item.component.html
+++ b/src/app/shared/components/item/item.component.html
@@ -29,7 +29,7 @@
     </ion-card>
   </div>
   <div *ngSwitchDefault>
-    <ion-card href="/home/detalle-producto" class="card-item-cart">
+    <ion-card href="/detalle-producto" class="card-item-cart">
       <div class="image-container">
         <img src="./assets/images/mac.png" />
       </div>
