Fix login and signup

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -73,7 +73,7 @@
   <ion-toolbar>
     <div class="container-footer">
       <ion-text> ¿Aún no tienes cuenta? </ion-text>
-      <ion-text> Registrate </ion-text>
+      <a href="/signup"><ion-text> Registrate </ion-text></a>
       <ion-text> Brandon | brandoning777@gmail.com </ion-text>
     </div>
   </ion-toolbar>
