--- a/src/app/pages/signup/signup.page.html
+++ b/src/app/pages/signup/signup.page.html
@@ -106,7 +106,9 @@
   <ion-toolbar>
     <div class="container-footer">
       <ion-text> ¿Ya tienes cuenta? </ion-text>
-      <ion-text> Inicia sesión</ion-text>
+      <a href="/login">
+        <ion-text> Inicia sesión</ion-text>
+      </a>
     </div>
   </ion-toolbar>
 </ion-footer>
